--- a/index.html
+++ b/index.html
@@ -44,9 +44,44 @@
                 <div class="container">
                     <div class="preimg">
                         <a href="#"><img src="img/untact hero.jpg" alt="artwork1"></a>
+                        <h3>'UNTACT' Multi-Page Site </h3>
                     </div>
+
+                    <div class="preimg">
+                        <a href="https://drive.google.com/file/d/1CP978zDsgq89p3oBNnDNJJ4vEegTIU2l/view?usp=sharing"><img src="img/pixel video.JPG" alt="artwork2"></a>
+                        <h3>Pixel Art Ball Video </h3>
+                    </div>
+
+                    <div class="preimg">
+                        <div class="olympic">
+                            <a href="#"><img src="img/5 olympic pictograms.jpg" alt="artwork3"></a>
+                        </div>
+                        <h3>Olympic Pictograms </h3>
+                    </div>
+
+                    <div class="preimg">
+                        <a href="https://jihohannma.github.io/studentsite/art128/finalv3/index.html"><img src="img/Subway hero.jpg" alt="artwork4"></a>
+                        <h3>'SUBWAY' Redesign Coded Site </h3>
+                    </div>
+
+                    <div class="preimg">
+                        <a href="#"><img src="img/Dolphin.jpg" alt="artwork5"></a>
+                        <h3>'WHALE' Graphic Design </h3>
+                    </div>
+
                 </div>
             </section>
+
+            <footer class="botnav">
+                <div class="container">
+                    <nav class="site-nav">
+                        <ul>
+                            <li><a href="#">WORK</a></li>
+                            <li><a href="#">ABOUT</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </footer>
 
         </main>
         
