--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <nav class="site-nav">
                     <!-- <div class="menu-button navicon">Menu</div> -->
                     <ul>
-                        <li><a href="#">WORK</a></li>
-                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="index.html">WORK</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -76,8 +76,8 @@
                 <div class="container">
                     <nav class="site-nav">
                         <ul>
-                            <li><a href="#">WORK</a></li>
-                            <li><a href="#">ABOUT</a></li>
+                            <li><a href="index.html">WORK</a></li>
+                            <li><a href="about.html">ABOUT</a></li>
                         </ul>
                     </nav>
                 </div>
