created first artwrk subpage

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section class="preview">
                 <div class="container">
                     <div class="preimg">
-                        <a href="#"><img src="img/untact hero.jpg" alt="artwork1"></a>
+                        <a href="untact.html"><img src="img/untact hero.jpg" alt="artwork1"></a>
                         <h3>'UNTACT' Multi-Page Site </h3>
                     </div>
 
