created subpages and added adobe fonts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio v2</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
+
+        <!-- ADOBE FONT -->
+        <link rel="stylesheet" href="https://use.typekit.net/yav7bgt.css">
         
     </head>
 
@@ -32,7 +35,7 @@
 
         <main class="site-main">
                 <section class="hero">
-                    <h1>Hi! This is Jiho. <br>I'm a NMA student in Kapio'lani Community College in Hawaii. <br>Feel free to look around my artworks! </h1>
+                    <h1>Hi! This is Jiho. <br>I'm a NMA student in Kapio'lani Community College in Hawaii. <br>Feel free to look around my Artworks! </h1>
                 </section>
 
 
@@ -54,7 +57,7 @@
 
                     <div class="preimg">
                         <div class="olympic">
-                            <a href="#"><img src="img/5 olympic pictograms.jpg" alt="artwork3"></a>
+                            <a href="pictogram.html"><img src="img/5 olympic pictograms.jpg" alt="artwork3"></a>
                         </div>
                         <h3>Olympic Pictograms </h3>
                     </div>
@@ -65,7 +68,7 @@
                     </div>
 
                     <div class="preimg">
-                        <a href="#"><img src="img/Dolphin.jpg" alt="artwork5"></a>
+                        <a href="whale.html"><img src="img/Dolphin.jpg" alt="artwork5"></a>
                         <h3>'WHALE' Graphic Design </h3>
                     </div>
 
