--- a/untact.html
+++ b/untact.html
@@ -9,6 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio v2 | UNTACT</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
+
+        <!-- ADOBE FONT -->
+        <link rel="stylesheet" href="https://use.typekit.net/yav7bgt.css">
         
     </head>
 
