--- a/whale.html
+++ b/whale.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="This is my portfolio v2" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio v2 | About</title>
+        <title>Portfolio v2 | WHALE</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
 
         <!-- ADOBE FONT -->
@@ -32,10 +32,19 @@
             </div>
         </header>
 
-        <main class="sub-main">
-            <img src="img/KakaoTalk_20210821_180130375.jpg" alt="My image">
-            <h1>Jiho Han</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde natus quidem odio. At, quod et exercitationem unde dolorem illum veritatis in perferendis cupiditate! Aut quis saepe natus commodi est magni!</p>
+        <main class="work-main">
+            <h1>WHALE <br> Graphic Design</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iste error, incidunt fugit explicabo quisquam aut pariatur magnam ipsum alias inventore quod expedita, blanditiis ad laudantium eos. Nesciunt fugit suscipit et nihil labore sed molestiae animi beatae praesentium asperiores sint modi iste vel ullam quos distinctio, repellat aspernatur exercitationem quae.</p>
+
+            <section class="block-container">
+                <img src="img/Title.jpg" alt="whaleimg">
+                <img src="img/Dolphin.jpg" alt="whaleimg">
+                <img src="img/Mermaid.jpg" alt="whaleimg">
+                <img src="img/Sailboat.jpg" alt="whaleimg">
+                <img src="img/Surf.jpg" alt="whaleimg">
+                <img src="img/Sunset.jpg" alt="whaleimg">
+            </section>
+
         </main>
 
         <footer class="botnav">
