--- a/whale.html
+++ b/whale.html
@@ -33,7 +33,7 @@
         </header>
 
         <main class="work-main">
-            <h1>WHALE <br> Graphic Design</h1>
+            <h1>WHALE <br> Digital Drawing</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iste error, incidunt fugit explicabo quisquam aut pariatur magnam ipsum alias inventore quod expedita, blanditiis ad laudantium eos. Nesciunt fugit suscipit et nihil labore sed molestiae animi beatae praesentium asperiores sint modi iste vel ullam quos distinctio, repellat aspernatur exercitationem quae.</p>
 
             <section class="block-container">
