--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     <div class="preimg">
                         <a href="whale.html"><img src="img/Dolphin.jpg" alt="artwork5"></a>
-                        <h3>'WHALE' Graphic Design </h3>
+                        <h3>'WHALE' Digital Drawing </h3>
                     </div>
 
                 </div>
