--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="This is my portfolio v2" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio v2</title>
+        <title>portfolio 2021</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
 
         <!-- ADOBE FONT -->
@@ -21,7 +21,7 @@
         <header class="topnav">
             <div class="container">
                 <div class="site-logo">
-                    <h1><a href="index.html">It's JIHO</a></h1>
+                    <h1><a href="index.html">JIHO HAN</a></h1>
                 </div>
                 <nav class="site-nav">
                     <!-- <div class="menu-button navicon">Menu</div> -->
@@ -35,7 +35,7 @@
 
         <main class="site-main">
                 <section class="hero">
-                    <h1>Hi! This is Jiho. <br>I'm a NMA student in Kapio'lani Community College in Hawaii. <br>Feel free to look around my Artworks! </h1>
+                    <h1>Hi! This is Jiho. <br>I'm a NMA student in Kapio'lani Community College in Hawaii. <br>Feel free to look around my Artwork! </h1>
                 </section>
 
 
