--- a/pictogram.html
+++ b/pictogram.html
@@ -34,7 +34,7 @@
 
         <main class="work-main">
             <h1>Olympic Pictogram</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iste error, incidunt fugit explicabo quisquam aut pariatur magnam ipsum alias inventore quod expedita, blanditiis ad laudantium eos. Nesciunt fugit suscipit et nihil labore sed molestiae animi beatae praesentium asperiores sint modi iste vel ullam quos distinctio, repellat aspernatur exercitationem quae.</p>
+            <p>This project is to design Olympic pictograms for the 2020 Tokyo Olympics. I selected five winter sports, ski jumping, speed skating, figure skating, snowboarding, and skeleton. I used a star shape for the background and tried to emphasize a muscle of a human. </p>
 
             <section class="block-container">
                 <div class="olympic">
