--- a/untact.html
+++ b/untact.html
@@ -34,7 +34,7 @@
 
         <main class="work-main">
             <h1>UNTACT <br> Multi-Page Site Design</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iste error, incidunt fugit explicabo quisquam aut pariatur magnam ipsum alias inventore quod expedita, blanditiis ad laudantium eos. Nesciunt fugit suscipit et nihil labore sed molestiae animi beatae praesentium asperiores sint modi iste vel ullam quos distinctio, repellat aspernatur exercitationem quae.</p>
+            <p>This project is to design a multi-page site for a new messenger application that I created, named 'UNTACT'. This application combines functions we need now, such as video meetings, chatting, and sharing files. I made all the illustrations, the logo,  icons, and mockups. I chose neon green and orange as the primary colors to make them seem energetic. Since it is a messenger application website, I used a lot of chatting symbols, such as speaking bubbles and other icons. </p>
 
             <section class="grid-container">
                 <div class="grid-item1"><img src="img/untact 1.jpg" alt="untact img"></div>
