--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <main class="sub-main">
             <img src="img/KakaoTalk_20210821_180130375.jpg" alt="My image">
             <h1>Jiho Han</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde natus quidem odio. At, quod et exercitationem unde dolorem illum veritatis in perferendis cupiditate! Aut quis saepe natus commodi est magni!</p>
+            <p>Hi! I'm Jiho. I was born in Korea and moved to Hawai'i during my high school year. I'm a NMA student at Kapio'lani Community College in Hawai'i. My goal is to get a bachelor's degree because I want to learn more about design, especially UI/UX design. </p>
         </main>
 
         <footer class="botnav">
