--- a/whale.html
+++ b/whale.html
@@ -34,7 +34,8 @@
 
         <main class="work-main">
             <h1>WHALE <br> Digital Drawing</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iste error, incidunt fugit explicabo quisquam aut pariatur magnam ipsum alias inventore quod expedita, blanditiis ad laudantium eos. Nesciunt fugit suscipit et nihil labore sed molestiae animi beatae praesentium asperiores sint modi iste vel ullam quos distinctio, repellat aspernatur exercitationem quae.</p>
+            <p>The topic of this project is a 'whale.' Whale is my favorite animal, and I drew different whales for each drawing. I used an Ipad and an Apple pencil for pictures and used photoshop to add paper texture. 
+            </p>
 
             <section class="block-container">
                 <img src="img/Title.jpg" alt="whaleimg">
